--- a/admin-control-panel/style.tablet.css
+++ b/admin-control-panel/style.tablet.css
@@ -12,4 +12,7 @@
     .col-s-10 {width: 83.33%;}
     .col-s-11 {width: 91.66%;}
     .col-s-12 {width: 100%;}
+    .tab-space{
+      padding-left: 0vw;
+  }
   }
