--- a/admin-control-panel/style.mobile.css
+++ b/admin-control-panel/style.mobile.css
@@ -1,4 +1,68 @@
-
+.header {
+    background-color: #9933cc;
+    color: #ffffff;
+    padding: 15px;
+    box-shadow: 0 0 8px rgba(255, 255, 255, 1.0);
+    border-radius: 8px;
+    height: 22vh;
+  }
+  #header-title-and-logout-container{
+    display: flex;
+    width: 100%;
+  }
+  #logout-btn{
+    position: absolute;
+    right: 2rem;
+  }
+  #logout-btn:hover{
+    color: red;
+  }
+  .menu ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+  }
+  
+  .menu li {
+    margin-bottom: 7px;
+    background-color: #33b5e5;
+    color: #ffffff;
+    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+  }
+  
+  .menu li:hover {
+    background-color: #0099cc;
+  }
+  
+  .aside {
+    background-color: #33b5e5;
+    padding: 15px;
+    color: #ffffff;
+    text-align: center;
+    font-size: 14px;
+    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+  }
+  
+  .footer {
+    background-color: #0099cc;
+    color: #ffffff;
+    text-align: center;
+    font-size: 12px;
+    padding: 15px;
+  }
+  .tab-space{
+      display: none;
+      padding-left: 2vw;
+  }
+  .tab{
+    cursor: pointer;
+    padding: 8px;
+    height: 100%;
+    width: 100%;
+  }
+  .tab:hover{
+    background-color: #0099cc;
+  }
   /* For mobile phones: */
   [class*="col-"] {
     width: 100%;
