--- a/admin-control-panel/style.mobile.css
+++ b/admin-control-panel/style.mobile.css
@@ -1,3 +1,14 @@
+.row::after {
+    content: "";
+    clear: both;
+    display: table;
+  }
+  
+  [class*="col-"] {
+    float: left;
+    padding: 15px;
+  }
+
 .header {
     background-color: #9933cc;
     color: #ffffff;
@@ -13,6 +24,9 @@
   #logout-btn{
     position: absolute;
     right: 2rem;
+  }
+  #client-name{
+    font-size: 3em;
   }
   #logout-btn:hover{
     color: red;
