--- a/admin-control-panel/style.desktop.css
+++ b/admin-control-panel/style.desktop.css
@@ -100,6 +100,7 @@
             width: 100%;
             background-color: rgb(27, 17, 21);
             padding: 10px;
+            border-bottom: none;
           }
           #dialog-box-cross-btn{
             position: absolute;
