--- a/admin-control-panel/style.mobile.css
+++ b/admin-control-panel/style.mobile.css
@@ -154,7 +154,7 @@
 
 #dialog-boxes-container {
   position: absolute;
-  display: flex;
+  display: none;
   justify-content: center;
   align-items: center;
   height: 98vh;
@@ -163,16 +163,18 @@
 }
 
 .dialog-box {
+  display: none;
   position: absolute;
   height: fit-content;
   width: 98%;
   height: 100%;
-  background-color: #333;
+  background-color: #201d1df2;
   margin-right: 10px;
   overflow: hidden;
 }
 
 .dialog-box-title-bar {
+  border-bottom: 1px solid white;
   display: flex;
   width: 100%;
   padding: 5px;
@@ -196,8 +198,6 @@
 
 
 #payment-receive-options-container {
-  
-  background-color: rgb(24, 23, 24);
   width: 100%;
   overflow: scroll;
   margin-top: 5px;
@@ -213,35 +213,35 @@
   cursor: pointer;
   font-size: 20px;
   margin-left: 2px;
+  background-color: #dcd9d9;
+  text-align: center;
+  border: none;
 }
 
 .payment-receive-option-button:hover {
-  background-color: ;
+  background-color: #201d1d;
+  color: #fff;
+  border: 1px solid red;
+  border-bottom: none;
+  margin-top: -1px;
+  transform: translateY(-2px);
 }
 
 #receive-payment-options-donation-space{
-  display: flex;
+  display: none;
   justify-content: center;
   height: 100%;
   width: 100%;
   overflow: auto;
-  background-color: #333;
 }
 
 
 
 .form-container {
-  background-color: transparent;
   padding: 30px;
-  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
   width: 100%;
   max-width: 500px;
-}
-
-h1 {
-  text-align: center;
-  color: #fff;
-  margin-top: 50px;
+  height: auto;
 }
 
 .form-group {
@@ -274,6 +274,7 @@ h1 {
   border-radius: 5px;
   cursor: pointer;
   transition: background-color 0.3s ease;
+  margin-bottom: 20px;
 }
 
 .submit-button:hover {
