--- a/admin-control-panel/style.desktop.css
+++ b/admin-control-panel/style.desktop.css
@@ -128,14 +128,16 @@
           #payment-receive-option-button-group{
             width: 100%;
           }
+
+          
           .receive-payment-tab-space{
             height: 87%;
             overflow: auto;
           }
 
 
-          .donation-form-container{
-            margin-top: 30px;
+          .rec-pay-form-container{
+            margin-top: 40px;
             width: 50%;
             padding: 10px;
             max-height: 100%;
@@ -162,7 +164,7 @@
             color: white;
           }
           
-          .donation-form-submit-button {
+          .rec-pay-form-submit-button {
             margin-top: 10px;
             width: 100%;
             padding: 12px;
